8346184: C2: assert(has_node(i)) failed during split thru phi

Reviewed-by: thartmann, chagedorn